--- a/.travis.yml
+++ b/.travis.yml
@@ -5,24 +5,13 @@ python:
   - "3.7"
   - "3.8"
 
-install:
-  - pip install numpy
+install: pip install numpy
   
-before_script:
-  - pip install pytest
+before_script: pip install pytest
 
 script:
   - poetry build
   - pytest test.py
-
-deploy: 
-  provider: pypi
-    distributions: "poetry publish"
-    user: "Williamzjc"
-    password:
-    on:
-      tags: true
-      python: 3.8
 
 notifications:
   email: false
