--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "digit_converter"
-version = "1.0"
-description = "A cool tool for digits converting. It could be applied in GA."
+version = "1.1"
+description = "A cool tool for digits converting, such as transforming a real number to a binary sequence. It could be applied in Genetic Algorithm."
 authors = ["William Song <30965609+Freakwill@users.noreply.github.com>"]
 
 license = "MIT"
@@ -12,19 +12,21 @@ keywords = ["Digit Converting", "Encoding", "Genetic Algorithm"]
 classifiers = [
     'License :: Public Domain',  # Public Domain
     'Programming Language :: Python',
-    'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
     'Intended Audience :: Science/Research',
     'Operating System :: OS Independent',
     'Topic :: Scientific/Engineering :: Mathematics',
     'Natural Language :: English'
 ]
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^5.3"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=0.14"]
 build-backend = "poetry.masonry.api"
 
