--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "digit_converter"
-version = "2.0"
-description = "A cool tool for digits converting. It could be applied in GA. It transforms a number to a list of digits under any base."
+version = "2.1"
+description = "A useful tool for digit conversion, applicable in Genetic Algorithms (GA). It transforms a number into a list of digits under any base, for example, `[1, 0, 1, 0, 1, 1, 1, 0] <-> 174`."
 authors = ["William Song <30965609+Freakwill@users.noreply.github.com>"]
 
 license = "MIT"
